# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/media_library/media_library.gni")

ohos_prebuilt_etc("userfilemanager_mimetypes.json") {
  module_install_dir = "etc/userfilemanager"

  source = "${MEDIALIB_UTILS_PATH}/configs/userfilemanager_mimetypes.json"

  subsystem_name = "multimedia"
  part_name = "media_library"
}

config("media_data_extension_public_config") {
  include_fuse = [ "${MEDIALIB_SERVICES_PATH}/media_fuse/include" ]
  include_scanner = [
    "${MEDIALIB_SERVICES_PATH}/media_scanner/include/callback",
    "${MEDIALIB_SERVICES_PATH}/media_scanner/include/scanner",
  ]

  include_multistages_capture = [
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/include",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/include/deferred_processing",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/include/dfx",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/include/utils",
  ]

  include_dfx = [ "${MEDIALIB_SERVICES_PATH}/media_dfx/include" ]

  include_cloud_asset_download = [
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/include/cloud_sync_utils",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/include/media_cloud_asset_download",
  ]

  include_cloud_dirty_handle = [
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/include/cloud_dirty_handle",
  ]

  include_albums_refresh =
      [ "${MEDIALIB_SERVICES_PATH}/media_albums_refresh/include" ]

  include_cloud_sync_server = [
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/dto",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/vo",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/orm",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/orm/po",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/controller",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/controller/processor",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/dao",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/service",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/service/processor",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/include/utils",
    "${MEDIALIB_INTERFACES_PATH}/inner_api/native/cloud_sync",
  ]

  include_media_ipc = [
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc/vo",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc/util",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc/controller",
  ]

  include_media_po =
      [ "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/po" ]

  include_media_assets_manager = [
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/include/",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/include/controller",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/include/dto",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/include/vo",
  ]

  include_media_albums_manager = [
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/include/",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/include/controller",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/include/dto",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/include/vo",
  ]

  include_media_permission =
      [ "${MEDIALIB_BUSINESS_PATH}/media_permission/include/" ]

  include_dirs = [
    "${MEDIALIB_INTERFACES_PATH}/innerkits/native/include",
    "${MEDIALIB_INTERFACES_PATH}/inner_api/media_library_helper/include",
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper/include",
    "${MEDIALIB_UTILS_PATH}/include",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/config",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/event_handler",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/operation",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/photo_album_operation",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include",
    "${MEDIALIB_SERVICES_PATH}/media_analysis_extension/include",
    "${MEDIALIB_SERVICES_PATH}/media_async_worker/include",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/include",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/include",
    "${MEDIALIB_SERVICES_PATH}/media_permission/include",
    "${MEDIALIB_SERVICES_PATH}/media_power_efficiency/include",
    "${MEDIALIB_SERVICES_PATH}/media_visit_count/include",

    "../../../../../bundlemanager/bundle_framework/interfaces/kits/js/common",
  ]
  include_dirs += include_fuse
  include_dirs += include_scanner
  include_dirs += include_multistages_capture
  include_dirs += include_dfx
  include_dirs += include_cloud_asset_download
  include_dirs += include_cloud_dirty_handle
  include_dirs += include_albums_refresh
  include_dirs += include_cloud_sync_server
  include_dirs += include_media_ipc
  include_dirs += include_media_po
  include_dirs += include_media_permission
  include_dirs += include_media_assets_manager
  include_dirs += include_media_albums_manager

  if (media_library_feature_cloud_enhancement) {
    include_cloud_enhancement = [
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/include",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/include/enhancement_service",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/include/utils",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/include/dfx",
    ]
    include_dirs += include_cloud_enhancement
  }

  if (defined(global_parts_info) &&
      defined(
          global_parts_info.device_cloud_gateway_media_cloud_enhance_service) &&
      media_library_feature_cloud_enhancement) {
    include_dirs += [ "${MEDIALIB_CLOUD_ENHANCEMENT_SERVICE_PATH}/interfaces/inner_api/include/c_api" ]
  }

  ldflags = [ "-Wl,--gc-sections" ]

  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
  ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("medialibrary_data_extension") {
  install_enable = true

  media_scan_source = [
    "${MEDIALIB_SERVICES_PATH}/media_scanner/src/scanner/media_scan_executor.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_scanner/src/scanner/media_scanner.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_scanner/src/scanner/media_scanner_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_scanner/src/scanner/media_scanner_db.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_scanner/src/scanner/metadata.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_scanner/src/scanner/metadata_extractor.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_scanner/src/scanner/scanner_utils.cpp",
  ]

  media_fuse_source = [
    "${MEDIALIB_SERVICES_PATH}/media_fuse/src/media_fuse_daemon.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_fuse/src/media_fuse_manager.cpp",
  ]

  media_thumbnail_source = [
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/cloud_thumbnail_observer.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/ithumbnail_helper.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_aging_helper.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_file_utils.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_generate_helper.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_generation_post_process.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_generate_worker.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_generate_worker_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_image_framework_utils.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_service.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_source_loading.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_uri_utils.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/src/thumbnail_utils.cpp",
  ]

  media_cloud_sync_source = [
    "${MEDIALIB_CLOUD_SYNC_PATH}/src/cloud_sync_helper.cpp",
    "${MEDIALIB_CLOUD_SYNC_PATH}/src/cloud_sync_switch_observer.cpp",
  ]

  media_rdb_utils_source = [
    "src/medialibrary_rdb_utils.cpp",
    "src/medialibrary_rdb_transaction.cpp",
  ]

  media_multistages_capture_source = [
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/deferred_processing/deferred_photo_proc_adapter.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/deferred_processing/deferred_video_proc_adapter.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/dfx/multistages_capture_dfx_first_visit.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/dfx/multistages_capture_dfx_request_policy.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/dfx/multistages_capture_dfx_result.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/dfx/multistages_capture_dfx_total_time.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/dfx/multistages_capture_dfx_trigger_ratio.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/utils/database_adapter.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/utils/exif_utils.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/utils/file_utils.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/utils/multistages_capture_request_task_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/multistages_capture_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/multistages_photo_capture_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/multistages_video_capture_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/multistages_moving_photo_capture_manager.cpp",
  ]

  media_dfx_source = [
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_analyzer.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_collector.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_reporter.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_timer.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_transaction.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_worker.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_utils.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_dfx/src/dfx_database_utils.cpp",
  ]

  media_cloud_sync_notify_handle_source = [
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/src/analysis_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/src/cloud_album_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/src/uri_convert_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/src/notify_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/src/cloud_sync_observer.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/src/cloud_sync_notify_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync_notify_handle/src/notify_responsibility_chain_factory.cpp",
  ]

  media_permission_source = [
    "${MEDIALIB_SERVICES_PATH}/media_permission/src/abs_permission_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_permission/src/db_permission_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_permission/src/grant_permission_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_permission/src/media_tool_permission_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_permission/src/pemission_common.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_permission/src/read_write_permission_handler.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_permission/src/system_api_check_handler.cpp",
  ]

  media_power_efficiency_source = [
    "${MEDIALIB_SERVICES_PATH}/media_power_efficiency/src/power_efficiency_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_power_efficiency/src/medialibrary_standby_service_subscriber.cpp",
  ]

  media_cloud_asset_download_source = [
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/src/cloud_sync_utils/cloud_sync_utils.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/src/media_cloud_asset_download/cloud_media_asset_callback.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/src/media_cloud_asset_download/cloud_media_asset_download_operation.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/src/media_cloud_asset_download/cloud_media_asset_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/src/media_cloud_asset_download/cloud_media_asset_observer.cpp",
  ]

  media_cloud_sync_server_source_vo = [
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/cloud_error_detail_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/cloud_file_data_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/cloud_mdkrecord_photos_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/cloud_mdkrecord_photo_album_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/failed_size_resp_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_check_records_album_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_check_records_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_cloud_thm_stat_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_dirty_type_stat_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_download_asset_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_download_thm_by_uri_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_download_thm_num_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_download_thm_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_file_pos_stat_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_retey_records_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_video_to_cache_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/media_operate_result_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_copy_records_photos_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_create_records_album_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_create_records_photos_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/get_aging_file_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_delete_albums_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_delete_records_album_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_delete_records_photos_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_dentry_file_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_download_asset_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_download_thms_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_fetch_photos_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_fetch_records_album_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_fetch_records_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_mdirty_records_album_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_modify_file_dirty_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/on_modify_records_photos_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/photo_album_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/photos_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/update_dirty_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/update_local_file_dirty_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/update_position_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/update_sync_status_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/update_thm_status_vo.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/vo/report_failure_vo.cpp",
  ]

  media_cloud_sync_server_source_dto = [
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/cloud_media_pull_data_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/check_file_data_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/cloud_file_data_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/media_operate_result_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/photo_album_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/photos_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/download_thumbnail_query_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/aging_file_query_dto.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dto/report_failure_dto.cpp",
  ]

  media_cloud_sync_server_source = [
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/cloud_media_data_controller_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/cloud_media_album_controller_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/cloud_media_photo_controller_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/cloud_media_download_controller_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/processor/cloud_media_album_controller_processor.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/processor/cloud_media_data_controller_processor.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/processor/cloud_media_photo_controller_processor.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/controller/processor/cloud_media_download_controller_processor.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dao/cloud_media_album_dao.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dao/cloud_media_common_dao.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dao/cloud_media_data_dao.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dao/cloud_media_photos_dao.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/dao/cloud_media_download_dao.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/cloud_media_data_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/cloud_media_photos_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/cloud_media_album_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/cloud_media_dfx_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/cloud_media_download_service.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/processor/cloud_media_data_service_processor.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/processor/cloud_media_photo_service_processor.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/service/processor/cloud_media_download_service_processor.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/cloud_media_dao_utils.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/cloud_media_sync_utils.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/cloud_media_file_utils.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/cloud_media_uri_utils.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/cloud_media_attachment_utils.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/sys_utils.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/cloud_sync_convert.cpp",
    "${MEDIALIB_CLOUD_SYNC_SERVICE_PATH}/src/utils/media_gallery_sync_notify.cpp",
  ]

  media_cloud_sync_server_source += media_cloud_sync_server_source_vo
  media_cloud_sync_server_source += media_cloud_sync_server_source_dto

  media_cloud_dirty_handle_source = [ "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/src/cloud_dirty_handle/cloud_upload_checker.cpp" ]

  media_albums_refresh_source = [
    "${MEDIALIB_SERVICES_PATH}/media_albums_refresh/src/albums_refresh_manager.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_albums_refresh/src/albums_refresh_notify.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_albums_refresh/src/albums_refresh_worker.cpp",
  ]

  media_visit_count = [ "${MEDIALIB_SERVICES_PATH}/media_visit_count/src/media_visit_count_manager.cpp" ]

  media_ipc_source =
      [ "src/ipc/controller/media_controller_service_factory.cpp" ]

  media_assets_manager_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/media_assets_rdb_operations.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/media_assets_service.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/controller/media_assets_controller_service.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/controller/media_assets_permission_policy.cpp",
  ]

  media_assets_manager_vo_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/commit_edited_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/form_info_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/create_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/clone_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/delete_photos_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/delete_photos_completed_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/asset_change_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/submit_cache_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/add_image_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/save_camera_photo_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/trash_photos_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/revert_to_original_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/cloud_enhancement_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/modify_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/retain_cloud_media_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/start_download_cloud_media_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/grant_photo_uri_permission_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/grant_photo_uris_permission_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/cancel_photo_uri_permission_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/start_thumbnail_creation_task_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/stop_thumbnail_creation_task_vo.cpp",
  ]

  media_assets_manager_dto_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/commit_edited_asset_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/form_info_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/cloud_enhancement_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/set_location_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/asset_change_create_asset_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/submit_cache_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/add_image_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/dto/save_camera_photo_dto.cpp",
  ]

  media_albums_manager_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/media_albums_rdb_operations.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/media_albums_service.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/controller/media_albums_controller_service.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/controller/media_albums_permission_policy.cpp",
  ]

  media_albums_manager_vo_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/create_album_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/delete_albums_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/delete_highlight_albums_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_album_name_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_cover_uri_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_dismiss_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_display_level_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_is_me_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/set_highlight_user_action_data_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/set_subtitle_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_add_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_remove_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_move_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_recover_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_delete_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_dismiss_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_merge_album_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_place_before_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_order_position_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_commit_modify_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_add_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_remove_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_recover_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_photo_query_vo.cpp",
  ]

  media_albums_manager_dto_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/dto/set_highlight_user_action_data_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/dto/change_request_set_album_name_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/dto/change_request_set_cover_uri_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/dto/album_commit_modify_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/dto/album_add_assets_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/dto/album_remove_assets_dto.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/dto/album_recover_assets_dto.cpp",
  ]

  media_permission_check_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_business_code_permission_map.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_composite_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_private_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_read_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_system_api_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_write_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_cloudfile_sync_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_db_permission_check.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_permission/src/media_permission_header_req.cpp",
  ]

  sources = [
    "${MEDIALIB_SERVICES_PATH}/media_analysis_extension/src/media_analysis_callback_stub.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_analysis_extension/src/media_analysis_helper.cpp",
    "${MEDIALIB_SERVICES_PATH}/media_analysis_extension/src/media_analysis_proxy.cpp",
    "${MEDIALIB_UTILS_PATH}/src/common_event_utils.cpp",
    "${MEDIALIB_UTILS_PATH}/src/cover_position_parser.cpp",
    "${MEDIALIB_UTILS_PATH}/src/cpu_utils.cpp",
    "${MEDIALIB_UTILS_PATH}/src/media_privacy_manager.cpp",
    "${MEDIALIB_UTILS_PATH}/src/parameter_utils.cpp",
    "src/background_cloud_file_download_callback.cpp",
    "src/background_cloud_file_processor.cpp",
    "src/custom_record_operations.cpp",
    "src/event_handler/album_plugin_table_event_handler.cpp",
    "src/event_handler/database_utils.cpp",
    "src/event_handler/photo_map_table_event_handler.cpp",
    "src/event_handler/tab_facard_photos_table_event_handler.cpp",
    "src/event_handler/tab_old_photos_table_event_handler.cpp",
    "src/event_handler/table_event_handler.cpp",
    "src/foreground_analysis_meta.cpp",
    "src/hi_audit.cpp",
    "src/media_datashare_ext_ability.cpp",
    "src/media_datashare_stub_impl.cpp",
    "src/medialibrary_album_fusion_utils.cpp",
    "src/medialibrary_album_operations.cpp",
    "src/medialibrary_all_album_refresh_processor.cpp",
    "src/medialibrary_analysis_album_operations.cpp",
    "src/medialibrary_app_uri_permission_operations.cpp",
    "src/medialibrary_app_uri_sensitive_operations.cpp",
    "src/medialibrary_appstate_observer.cpp",
    "src/medialibrary_asset_operations.cpp",
    "src/medialibrary_astc_stat.cpp",
    "src/medialibrary_audio_operations.cpp",
    "src/medialibrary_bundle_manager.cpp",
    "src/medialibrary_command.cpp",
    "src/medialibrary_data_manager.cpp",
    "src/medialibrary_data_manager_utils.cpp",
    "src/medialibrary_dir_operations.cpp",
    "src/medialibrary_facard_operations.cpp",
    "src/medialibrary_file_operations.cpp",
    "src/medialibrary_formmap_operations.cpp",
    "src/medialibrary_inotify.cpp",
    "src/medialibrary_location_operations.cpp",
    "src/medialibrary_meta_recovery.cpp",
    "src/medialibrary_notify.cpp",
    "src/medialibrary_object_utils.cpp",
    "src/medialibrary_photo_operations.cpp",
    "src/medialibrary_ptp_operations.cpp",
    "src/medialibrary_rdbstore.cpp",
    "src/medialibrary_restore.cpp",
    "src/medialibrary_search_operations.cpp",
    "src/medialibrary_smartalbum_map_operations.cpp",
    "src/medialibrary_smartalbum_operations.cpp",
    "src/medialibrary_story_operations.cpp",
    "src/medialibrary_subscriber.cpp",
    "src/medialibrary_tab_asset_and_album_operations.cpp",
    "src/medialibrary_tab_old_photos_operations.cpp",
    "src/medialibrary_uripermission_operations.cpp",
    "src/medialibrary_urisensitive_operations.cpp",
    "src/medialibrary_vision_operations.cpp",
    "src/moving_photo_processor.cpp",
    "src/operation/display_name_info.cpp",
    "src/operation/duplicate_photo_operation.cpp",
    "src/operation/medialibrary_custom_restore_notify.cpp",
    "src/operation/photo_album_copy_meta_data_operation.cpp",
    "src/operation/photo_asset_copy_operation.cpp",
    "src/operation/photo_burst_operation.cpp",
    "src/operation/photo_custom_restore_operation.cpp",
    "src/operation/photo_day_month_year_operation.cpp",
    "src/operation/photo_displayname_operation.cpp",
    "src/operation/photo_file_operation.cpp",
    "src/operation/photo_mimetype_operation.cpp",
    "src/operation/photo_owner_album_id_operation.cpp",
    "src/operation/photo_source_path_operation.cpp",
    "src/operation/photo_storage_operation.cpp",
    "src/photo_album_operation/photo_album_lpath_operation.cpp",
    "src/photo_album_operation/photo_album_merge_operation.cpp",
    "src/photo_album_operation/photo_album_update_date_modified_operation.cpp",
    "src/photo_map_operations.cpp",
    "src/picture_data_operations.cpp",
    "src/picture_handle_service.cpp",
    "src/picture_manager_thread.cpp",
    "src/trash_async_worker.cpp",
    "src/video_composition_callback_imp.cpp",
    "src/zip_util.cpp",
  ]
  sources += media_scan_source
  sources += media_fuse_source
  sources += media_thumbnail_source
  sources += media_cloud_sync_source
  sources += media_rdb_utils_source
  sources += media_multistages_capture_source
  sources += media_dfx_source
  sources += media_cloud_sync_notify_handle_source
  sources += media_permission_source
  sources += media_power_efficiency_source
  sources += media_cloud_asset_download_source
  sources += media_cloud_dirty_handle_source
  sources += media_albums_refresh_source
  sources += media_cloud_sync_server_source
  sources += media_visit_count
  sources += media_ipc_source
  sources += media_permission_check_source
  sources += media_assets_manager_source
  sources += media_assets_manager_vo_source
  sources += media_assets_manager_dto_source
  sources += media_albums_manager_source
  sources += media_albums_manager_vo_source
  sources += media_albums_manager_dto_source

  if (media_library_feature_cloud_enhancement) {
    media_cloud_enhancement_source = [
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/enhancement_service/enhancement_service_adapter.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/utils/enhancement_database_operations.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/utils/dynamic_loader.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/utils/enhancement_thread_manager.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/utils/settings_monitor.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/utils/cloud_enhancement_checker.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/enhancement_task_manager.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/enhancement_manager.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/dfx/cloud_enhancement_dfx_get_count.cpp",
    ]
    sources += media_cloud_enhancement_source
  }

  public_configs = [ ":media_data_extension_public_config" ]

  deps = [
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper:media_library",
    "${MEDIALIB_SERVICES_PATH}/media_async_worker:medialibrary_async_worker",
    "${MEDIALIB_UTILS_PATH}:medialibrary_common_utils",
    "${MEDIALIB_UTILS_PATH}:permission_utils",
    "${MEDIALIB_UTILS_PATH}:post_event_utils",
  ]

  include_dirs = [
    "${MEDIALIB_CLOUD_SYNC_PATH}/include",
    "${MEDIALIB_SERVICES_PATH}/media_async_worker/include",
  ]

  if (media_library_feature_mtp) {
    include_dirs += [ "${MEDIALIB_SERVICES_PATH}/media_mtp/include" ]
    deps += [ "${MEDIALIB_SERVICES_PATH}/media_mtp:media_mtp" ]
  }

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "ability_runtime:extensionkit_native",
    "ability_runtime:runtime",
    "ability_runtime:uri_permission_mgr",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "app_file_service:sandbox_helper_native",
    "background_task_mgr:bgtaskmgr_innerkits",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "data_share:datashare_provider",
    "dfs_service:cloudsync_kit_inner",
    "drivers_interface_display:display_commontype_idl_headers",
    "e2fsprogs:libext2_uuid",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "image_framework:image_native",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "kv_store:distributeddata_inner",
    "libexif:libexif",
    "libfuse:libfuse",
    "napi:ace_napi",
    "netmanager_base:net_conn_manager_if",
    "os_account:os_account_innerkits",
    "player_framework:media_client",
    "player_framework:video_editor",
    "preferences:native_preferences",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
    "window_manager:libdm",
    "zlib:shared_libz",
  ]

  defines = []
  if (defined(global_parts_info) &&
      defined(global_parts_info.filemanagement_dfs_service)) {
    defines += [ "CLOUD_SYNC_MANAGER" ]
    external_deps += [ "dfs_service:cloudsync_kit_inner" ]
  }
  defines += [ "MEDIALIBRARY_COMPATIBILITY=1" ]
  if (media_library_feature_mtp) {
    defines += [ "MEDIALIBRARY_MTP_ENABLE=1" ]
  }
  defines += [ "META_RECOVERY_SUPPORT=1" ]

  if (!defined(global_parts_info) ||
      defined(global_parts_info.security_security_component_manager)) {
    defines += [ "MEDIALIBRARY_SECURITY_OPEN=1" ]
    external_deps += [ "security_component_manager:libsecurity_component_sdk" ]
  }

  if (defined(global_parts_info) && defined(
          global_parts_info.device_cloud_gateway_media_cloud_enhance_service) &&
      media_library_feature_cloud_enhancement && !factory) {
    defines += [ "ABILITY_CLOUD_ENHANCEMENT_SUPPORT" ]
    sources += [ "${MEDIALIB_SERVICES_PATH}/media_cloud_enhancement/src/enhancement_service/enhancement_service_callback.cpp" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.multimedia_camera_framework) &&
      global_parts_info.multimedia_camera_framework) {
    defines += [ "ABILITY_CAMERA_SUPPORT" ]
    external_deps += [ "camera_framework:camera_framework" ]
    sources += [
      "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/deferred_processing/multistages_capture_deferred_photo_proc_session_callback.cpp",
      "${MEDIALIB_SERVICES_PATH}/media_multistages_capture/src/deferred_processing/multistages_capture_deferred_video_proc_session_callback.cpp",
    ]
  }

  if (media_library_feature_cloud_enhancement) {
    defines += [ "MEDIALIBRARY_FEATURE_CLOUD_ENHANCEMENT" ]
  }

  if (!media_library_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }

  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_battery_manager)) {
    external_deps += [ "battery_manager:batterysrv_client" ]
    cflags_cc += [ "-DHAS_BATTERY_MANAGER_PART" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager)) {
    external_deps += [ "power_manager:powermgr_client" ]
    cflags_cc += [ "-DHAS_POWER_MANAGER_PART" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_thermal_manager)) {
    external_deps += [ "thermal_manager:thermalsrv_client" ]
    cflags_cc += [ "-DHAS_THERMAL_MANAGER_PART" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_wifi)) {
    external_deps += [ "wifi:wifi_sdk" ]
    cflags_cc += [ "-DHAS_WIFI_MANAGER_PART" ]
  }

  if (resourceschedule_device_standby) {
    external_deps += [ "device_standby:standby_innerkits" ]
    defines += [ "DEVICE_STANDBY_ENABLE" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.resourceschedule_efficiency_manager)) {
    defines += [ "EFFICIENCY_MANAGER_ENABLE" ]
  }

  if (is_emulator) {
    defines += [ "MEDIALIBRARY_EMULATOR" ]
  }

  subsystem_name = "multimedia"
  part_name = "media_library"
}
