# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

MEDIA_LIB_BASE_DIR = "//foundation/multimedia/medialibrary_standard"
MEDIA_LIB_INNERKITS_DIR = "$MEDIA_LIB_BASE_DIR/frameworks/innerkitsimpl"

config("medialib_proxy_public_config") {
  include_dirs = [
    "$MEDIA_LIB_INNERKITS_DIR/medialibrary_proxy/include",
    "$MEDIA_LIB_BASE_DIR/interfaces/innerkits/native/include",
    "$MEDIA_LIB_INNERKITS_DIR/media_library/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("medialibrary_proxy") {
  install_enable = true
  sources = [
    "src/media_lib_proxy.cpp",
  ]

  public_configs = [ ":medialib_proxy_public_config" ]

  deps = [
    "$MEDIA_LIB_INNERKITS_DIR/media_library:media_library",
    "$MEDIA_LIB_INNERKITS_DIR/medialibrary_service:medialibrary_service",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "hiviewdfx_hilog_native:libhilog",
    "samgr_L2:samgr_proxy",
  ]
  subsystem_name = "multimedia"
  part_name = "multimedia_media_library_standard"
}
