# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

MEDIA_LIB_BASE_DIR = "//foundation/multimedia/medialibrary_standard"
MEDIA_LIB_INNERKITS_DIR = "$MEDIA_LIB_BASE_DIR/frameworks/innerkitsimpl"

ohos_shared_library("medialibrary_service") {
  install_enable = true
  sources = [
    "src/media_lib_service.cpp",
    "src/media_lib_service_stub.cpp",
  ]

  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  cflags_cc = cflags
  include_dirs =
      [ "//base/hiviewdfx/hilog/interfaces/native/innerkits/include/hilog" ]

  public_configs = [ ":medialibrary_external_library_config" ]

  deps = [
    "$MEDIA_LIB_INNERKITS_DIR/media_library:media_library",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  part_name = "multimedia_media_library_standard"
  subsystem_name = "multimedia"
}

config("medialibrary_external_library_config") {
  include_dirs = [ "$MEDIA_LIB_INNERKITS_DIR/medialibrary_service/include" ]
  include_dirs += [ "$MEDIA_LIB_BASE_DIR/interfaces/innerkits/native/include" ]
}
